# openfaas-rust-axum-template

./: LICENSE  README.md
template/rust-axum/: Dockerfile  template.yml
template/rust-axum/function/: Cargo.toml
template/rust-axum/function/src/: lib.rs
template/rust-axum/main/: Cargo.toml
template/rust-axum/main/src/: main.rs
