[package]
name = "main"
version = "0.1.0"
authors = ["Shedrach Okonofua"]
edition = "2021"

[dependencies]
handler = { path = "../function" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
axum = "0.6.20"
tower = "0.4.13"
